1.4.0.0
Aded testfile.py
Created github workflow
1.3.0.0
Created new panel 
Sorted functions in files
Some errors fixeds
1.2.0.0
Created gvar, utils, and console_utils modules
Created a simple console UI for test functions
Fixed simples errors
1.1.0.1
Fixed errors in handler declarations
1.1.0.0
Added basics functions templates to modules
Added install.sh
Added TODO file
Added rresources and tasks templates to json
1.0.0.1
Added .gitignore to .gitignore
AMAZING...
1.0.0.0
First commit with basic files in my project

HOW UNDERSTAND VERSIONS CHANGELOGS
F.A.BE.SE
/*
F Change if add framework
A Change if add class or functions
BE Change if a big error are solved
SE Change if a stupid error are solved
*/