@@ -1,0 +1,12 @@
+# First year programing project
+## project specifications in: [project.md](./project.md)
+## How to run ?
+### linux 
+~~~
+bash ./run.sh
+~~~
+### windows
+only you know how 
+XD comming soo
+## What can do ?
+..........
