@@ -1,2 +1,0 @@
-python3 -m pip install -r requirements.txt --break-system-packages
-python3 dinev.py
