@@ -1,0 +1,10 @@
+python3 -m pip install -r requirements.txt --break-system-packages
+python3 testfile.py
+echo "PYTHON VERSION"
+python3 --version
+echo "=============!"
+echo "RUNING AS" ; whoami
+echo "=============!"
+
+sleep 3
+python3 dinev.py
