@@ -1,5 +1,8 @@
 1.4.0.0
 Aded testfile.py
+Modules updates
+Created show events function
+Class event is created new
 Created github workflow
 1.3.0.0
 Created new panel 
